# qev-desktop

./: .gitignore  404.html  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  README.md  SECURITY.md  app-redirect.html  index.html  pyproject.toml
.github/workflows/: pages.yml  proof-lock-web-pages.yml  qev-build.yml
dashboard/: streamlit_app.py
deploy/: Caddyfile  Dockerfile  deploy.sh  docker-compose.yml  nginx-secure.conf  qev-relay.service  start.sh
docs/: 404.html  CLI_FAILURE_UX.md  DEMO_SCRIPT.md  ENVELOPE_REWRAP.md  KEY_MANAGEMENT.md  NFET_INTEGRATION_DECISION.md  NFET_SELF_ATTACK.md  NFET_SPEC.md  OPEN_SOURCE_REVIEW.md  OUTREACH_CANDIDATES.md  POSITIONING.md  PRODUCT_PREVIEW.md  RELEASE_WALKTHROUGH.md  REVIEWER_BRIEF.md  REVIEW_COMMANDS.md  SECURITY_READINESS_CHECKLIST.md  SIGNED_ARTIFACTS_ROADMAP.md  THREAT_MODEL.md  TRUST_SEMANTICS.md  VAULT_FORMAT.md  challenge_social_posts.md  index.html
docs/assets/: index-B3JTQd75.js  index-BeXUQamc.js  index-Bl0-f-HS.css  index-Bosgf39N.css  index-BtOHIOxT.css  index-CTrhYHpO.js  index-DW08StHT.css  index-OZVUwFu9.css  index-WDculbU6.js
docs/qev/: phase-2-pairing.md  phase-3-relay.md
landing/: challenge.html  contact.html  downloads.html  index.html  privacy.html  review.html  robots.txt  security.html  site-integrity.json  site-signer.ed25519.pub  site-verify.js  sitemap.xml  styles.css  verify.html
landing/android/: gate.js  index.html
landing/challenge/: challenge-meta.json
landing/challenge/bundle/: artifact.json  manifest.json  metadata.json  signature.json
landing/downloads/: qira-link-install.sh  qira-link-unquarantine.sh
landing/link/: index.html
landing/notify/: gen_icons.py  index.html  manifest.json  notify.js  sw.js
landing/vault/: SODIUM-VERSION.txt  chat.js  gate.js  index.html
proof-lock-web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
proof-lock-web/src/: App.tsx  libsodium-wrappers-sumo.d.ts  qev.ts  styles.css
qev-cli/: LICENSE  README.md  package-lock.json  package.json
qev-cli/lib/: canonical.js  index.js  prompt.js  rewrap.js  vault.js
qev-cli/test/: canonical.test.js  rewrap.test.js  vault.test.js
scripts/: build_packet.py  deploy-proof-lock-docs.sh  open_packet.py  run_audit.py  sign_site_content.py  tamper_packet.py
src/bry_nfet_sx/: __init__.py
src/bry_nfet_sx/api/: app.py
src/bry_nfet_sx/bry/: __init__.py  alphabet.py  binary.py  canonical.py  tokens.py
src/bry_nfet_sx/crypto_core/: aead.py
src/bry_nfet_sx/nfet/: __init__.py  config.py  state.py  trace.py
src/bry_nfet_sx/protocol/: __init__.py  audit.py  packet.py  transforms.py
src/bry_nfet_sx/utils/: settings.py
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/pairing/: Cargo.toml
tauri-app/src-tauri/pairing/src/: chat_store.rs  error.rs  handshake.rs  identity.rs  identity_backup.rs  invite.rs  keystore.rs  lib.rs  mdns.rs  peer_store.rs  push.rs  safety.rs  seal.rs  transport.rs
tauri-app/src-tauri/pairing/tests/: end_to_end.rs
tauri-app/src-tauri/relay/: Cargo.toml
tauri-app/src-tauri/relay/src/: client.rs  config.rs  error.rs  lib.rs  main.rs  message.rs  service.rs  sqlite_store.rs  store.rs  ws_bridge.rs
tauri-app/src-tauri/relay/tests/: deliver_to_mac.rs  e2e.rs  inject_chat_to_mac.rs  live_relay.rs  two_device_chat.rs
tauri-app/src-tauri/src/: lib.rs  main.rs  relay_defaults.rs
tauri-app/ui/: app.js  chat-ui.js  chat.js  index.html  pairing.js
tests/: test_audit_matrix.py  test_bry_binary.py  test_bry_canonical.py  test_bry_formats.py  test_bry_tokens.py  test_nfet_schedule.py  test_nfet_trace.py  test_nonce_registry.py  test_packet.py  test_transform_serialization.py  test_transforms.py
