[package]
name = "qev"
version = "0.28.1"
description = "QEV — Qira Encryption Vault. Offline encrypted envelopes."
authors = ["Bryan Leonard <bryanleonard@imagineqira.com>"]
license = "Proprietary"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }

[features]
# Enable logging in dev builds, strip for release.
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
# Smaller binary, slower build. Same tradeoff as the Swift -O build.
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
strip = true
