[package]
name = "qev"
version = "0.29.0"
description = "QEV — Qira Encryption Vault. Offline encrypted envelopes."
authors = ["Bryan Leonard <bryanleonard@imagineqira.com>"]
license = "Proprietary"
edition = "2021"
rust-version = "1.77"

# The crate is BOTH a library and a binary. The library is linked into
# the Android Gradle project as a cdylib/staticlib (Tauri v2 mobile
# entry point); the binary is what Mac/Windows desktop builds produce.
#
#   crate-type = ["staticlib", "cdylib", "rlib"]
#     staticlib — for iOS (when we add it later)
#     cdylib    — for Android JNI linking
#     rlib      — so the desktop binary in main.rs can call qev::run()
[lib]
# Library name must match the package name so the Tauri Android
# Gradle project finds libqev.so. Cargo allows lib+bin sharing a
# name; the lib is referenced as `use qev::run;` from main.rs.
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "qev-bin"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "net", "io-util"] }

# Phase 2: device pairing + direct P2P vault transfer.
# Local path dep on the sibling crate under ./pairing/. That crate
# owns the Noise XK handshake, CBOR QevMessage framing, and the
# pairing-invite CBOR/QR format.
qev-pairing = { path = "./pairing" }

# Phase 3: federated relay for offline delivery. Reuses the same
# Noise XK stack for authentication + transport. The client half
# of the crate is what tauri-app links against; the server binary
# is a separate target under the same crate.
qev-relay = { path = "./relay" }

# Used by the pairing command layer for base64url
# encode/decode of stored peer keys and for ISO 8601 timestamps
# on peer records. Duplicated here (qev-pairing already pulls them
# in) but Cargo resolves to the same crate version.
base64 = "0.22"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }

[features]
# Enable logging in dev builds, strip for release.
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
# Smaller binary, slower build. Same tradeoff as the Swift -O build.
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
strip = true
